--- a/CookingCurator/Views/Profile/Dashboard.cshtml
+++ b/CookingCurator/Views/Profile/Dashboard.cshtml
@@ -25,18 +25,13 @@
 
 <div style="font-size:xx-large" class="col-lg-6 text-center">
     <p style="padding:10px 10px 10px 10px;background-color:lightsteelblue;border:groove;border-width:10px">
-        Recipe Options
+        Other Options
     </p>
     <div class="col-lg-12" style="font-size:x-large">
         <p class="text-center" style="padding:10px 10px 10px 10px;background-color:beige;border:groove;border-width:10px"><a>@Html.ActionLink("Add Verified Recipe", "CreateVerified", "Recipe")</a></p>
-        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:beige;border:groove;border-width:10px"><a>@Html.ActionLink("View Verified Recipes", "Index", "Recipe")</a></p>
+        <p class="text-center" style="padding:10px 10px 10px 10px;background-color:beige;border:groove;border-width:10px"><a>@Html.ActionLink("Admin Documentation", "AdminDoc", "Profile")</a></p>
     </div>
 </div>
 
 <hr />
 
-<!-- <hr />
-
-Last Login: @ViewBag.Date
-
--->
