--- a/CookingCurator/Views/Recipe/Details.cshtml
+++ b/CookingCurator/Views/Recipe/Details.cshtml
@@ -67,8 +67,9 @@
         <dd>
             @Html.DisplayFor(model => model.rating)
             <p>
-                @Html.ActionLink("Rate Up", "VoteUp", new { id = Model.recipe_Id })
-                || @Html.ActionLink("Rate Down", "VoteDown", new { id = Model.recipe_Id })
+                <br />
+                @Html.ActionLink("Rate Up", "VoteUp", new { id = Model.recipe_Id }, new { @class = "btn btn-default" })
+                @Html.ActionLink("Rate Down", "VoteDown", new { id = Model.recipe_Id }, new { @class = "btn btn-default" })
             </p>
         </dd>
 
