--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -70,6 +70,11 @@
         <td>https://harvesthq.github.io/chosen/</td>
         <td>Used for help to select diets, allergies and ingredients</td>
     </tr>
+    <tr>
+        <td>Email</td>
+        <td>https://stackoverflow.com/questions/26784366/how-to-send-email-from-mvc-5-application</td>
+        <td>Used for help to send an email from asp.net application</td>
+    </tr>
 </table>
 
 <h3>Recipes Source</h3>
