--- a/CookingCurator/Views/Profile/UserDoc.cshtml
+++ b/CookingCurator/Views/Profile/UserDoc.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>User Doc</h2>
+<h2>User Guide</h2>
 
 <h3>Creating a recipe</h3>
 
@@ -65,9 +65,25 @@
 
 <h2>FAQ</h2>
 
+<h3>Can other users see my recipes?</h3>
+
+<p>Once they are approved and given "verified" status, your recipe will be visible to all users of the application.</p>
+
+<p>Only you and administrators can view it before it gains that status.</p>
+
+<h3>What is a "Verified" recipe?</h3>
+
+<p>A verified recipe is a recipe personally approved by the administrators of the website and is recommended by the administrators.</p>
+
 <h3>Why can't I create a verified recipe?</h3>
 
-<p>Only admin can create verified recipes.</p>
+<p>Only admin can create verified recipes, or approve user recipes to become verified.</p>
+
+<h3>What is a "diet type?"</h3>
+
+<p>A diet type is a category that prohibits certain types of meals based on their ingredients.  Marking a recipe with a diet type allows others who follow that diet to find your recipe more easily.</p>
+
+<p>If you are not sure which diets apply to your recipe, you may leave the field blank.</p>
 
 <h3>How do I change Password?</h3>
 
@@ -76,3 +92,17 @@
 <h3>How do I change Username?</h3>
 
 <p>Go to the "UserDashboard" and click on Change Username.</p>
+
+<h3>There was an error when trying to create my recipe.  What happened?</h3>
+
+<p>Your instructions field may be too long.  The maximum character limit for instructions is 2000</p>
+
+<p>You may prove a link to the full recipe if you need to trim down details.</p>
+
+<h3>If I delete my account, will my recipes remain?</h3>
+
+<p>No.  Your recipes will be deleted along with your account.  If you re-create an account with the original email, it will be a fresh account.</p>
+
+<h3>Do my diet, allergy, and restriction choices effect the search recipes page?</h3>
+
+<p>No.  They only filter the recipe listing page.</p>
