--- a/CookingCurator/Views/User/Details.cshtml
+++ b/CookingCurator/Views/User/Details.cshtml
@@ -9,8 +9,9 @@
 <h1><b><u>Information about "@Html.DisplayFor(model => model.userName)"</u></b></h1>
 <br />
 @Html.ActionLink("Click here to see this user's recipes.", "Authors", "Recipe", new { authorName = Model.userName }, new { @class = "btn btn-default" })
+<br />
 <p>
-    Be advised that no user recipes are verified by Cooking Curator administrators.  User discretion is advised.
+    <br />Be advised that no user recipes are verified by Cooking Curator administrators.  User discretion is advised.
 </p>
 
 <hr />
@@ -18,4 +19,5 @@
 <hr />
 
 @Html.ActionLink("Click here to report this user.", "ContactUs", "Profile", null, new { @class = "btn btn-default" })
-<p>Abuse of the report system will result in a permanent ban.</p>
+<br />
+<p><br />Abuse of the report system will result in a permanent ban.</p>
