--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -75,6 +75,11 @@
         <td>https://stackoverflow.com/questions/26784366/how-to-send-email-from-mvc-5-application</td>
         <td>Used for help to send an email from asp.net application</td>
     </tr>
+    <tr>
+        <td>Git client</td>
+        <td>https://tortoisegit.org/</td>
+        <td>Used for help work with git repository (pull, push etc)</td>
+    </tr>
 </table>
 
 <h3>Recipes Source</h3>
