--- a/CookingCurator/Views/References/Index.cshtml
+++ b/CookingCurator/Views/References/Index.cshtml
@@ -80,6 +80,17 @@
         <td>https://tortoisegit.org/</td>
         <td>Used for help work with git repository (pull, push etc)</td>
     </tr>
+    <tr>
+        <td>Password hashing</td>
+        <td>https://forums.asp.net/t/2132105.aspx?password+encryption+using+Salt+and+Hash+technique</td>
+        <td>Used for reference on how to do password hashing with salt</td>
+    </tr>
+    <tr>
+        <td>Image Upload/Display</td>
+        <td>https://www.aspsnippets.com/Articles/Save-and-Retrieve-Image-from-SQL-Server-Database-in-ASPNet-MVC.aspx</td>
+        <td>Used for reference on how to upload/display images in asp.net mvc</td>
+    </tr>
+    
 </table>
 
 <h3>Recipes Source</h3>
