--- a/CookingCurator/Views/Profile/AdminDoc.cshtml
+++ b/CookingCurator/Views/Profile/AdminDoc.cshtml
@@ -16,13 +16,13 @@
 
 <p>Additionally, admin can edit or delete ANY recipe in the application.</p>
 
-<p>Admin can also search through and ban users, and created verified recipes.</p>
+<p>Admin can also search through and ban users, and create verified recipes.</p>
 
 <h3>Admin Created Recipes</h3>
 
-<p>Admin created/approve recipes will have a verified checkbox next to them.</p>
+<p>Admin created/approved recipes will have a verified checkbox next to them.</p>
 
-<p>Also, admins need to fill in every field except for diet types and image in order to create a recipe.</p>
+<p>Admins need to fill in every field except for diet types and image in order to create a verified recipe.</p>
 
 <h3>Banning Users</h3>
 
@@ -40,7 +40,7 @@
 
 <p>Any new ingredients must be added through the database.</p>
     
-<p>Use the INGRED table, and given an allergen status from the ALLERGY_INGREDS table, with the correct allergy ID from the ALLERGY table.</p>
+<p>Use the INGRED table, and give an allergen status from the ALLERGY_INGREDS table, with the correct allergy ID from the ALLERGY table.</p>
 
 <p>Ingredients must also be removed through the database.  Any INGRED table using the unique ingredient ID should also be updated accordingly.</p>
 
