--- a/CookingCurator/Views/Profile/UserDoc.cshtml
+++ b/CookingCurator/Views/Profile/UserDoc.cshtml
@@ -64,7 +64,7 @@
 
 <p>Users can rate a recipe by selecting "Rate Up or Rate Down" in a Recipe's Details.</p>
 
-<p>You can change your vote from positive or negative after voting, or vice versa, but you cannot reset your vote to zero</p>
+<p>You can change your vote from positive to negative after voting, or vice versa, but you cannot reset your vote to zero</p>
 
 <h3>Reporting Recipe</h3>
 
