--- a/CookingCurator/Views/Profile/UserDoc.cshtml
+++ b/CookingCurator/Views/Profile/UserDoc.cshtml
@@ -26,7 +26,7 @@
 
 <p>Ingredients can be selected using the Ingredient Selection Field.</p>
 
-<p>Users have the option to leave out a source links, diet types and images but need to fill every other field.</p>
+<p>Users have the option to leave out a source link, diet types and images but need to fill every other field.</p>
 
 <h3>Editing a recipe</h3>
 
